--- a/ReactYoutube/src/Components/Home/Video.css
+++ b/ReactYoutube/src/Components/Home/Video.css
@@ -9,11 +9,14 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+    background-color: #ca9898dc;
+
 }
 
 .videoInfo{
     display: flex;
     margin-top: 10px;
+    color:var(--text-light-main);
 }
 
 .videoInfo div{
@@ -67,7 +70,7 @@
     right: 3px;
     font-size: 12px;
     padding: 2px 6px;
-    background-color: #000000dc;
+    background-color: #9b9393dc;
     margin: 0;
     font-weight: 500;
     border-radius: 3px;
